refactoring, removed unused junk, fix icon and support minimise

--- a/MidiPeakVis.vcxproj
+++ b/MidiPeakVis.vcxproj
@@ -155,6 +155,7 @@
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="MidiFlasher.cpp" />
     <ClCompile Include="MidiPeakVis.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
@@ -168,7 +169,6 @@
   </ItemGroup>
   <ItemGroup>
     <Image Include="MidiPeakVis.ico" />
-    <Image Include="small.ico" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
